# TimeCapsuleRevive

./: CLAUDE.md  LICENSE  README.md  build_samba.sh  pyproject.toml
.github/workflows/: release.yml
TimeCapsuleApp/: Package.swift  build-app.sh  project.yml
TimeCapsuleApp/Sources/TimeCapsuleApp/: Info.plist  TimeCapsuleApp.swift
TimeCapsuleApp/Sources/TimeCapsuleApp/Models/: TimeCapsule.swift
TimeCapsuleApp/Sources/TimeCapsuleApp/Services/: KeychainService.swift  SSHService.swift  TimeCapsuleMonitor.swift
TimeCapsuleApp/Sources/TimeCapsuleApp/Views/: MenuBarView.swift  SettingsView.swift  SettingsWindowController.swift
timecapsule_revive/: __init__.py  __main__.py  acp_client.py  agent.py  cli.py  deploy.py  discovery.py  monitor.py  shares.py  ssh.py  verify.py
timecapsule_revive/templates/: pf_rules.template  rc_samba.template  smb.conf.template
